--- a/src/styles/our-member.css
+++ b/src/styles/our-member.css
@@ -13,7 +13,7 @@
   left: 50%;
   width: 100%;
   height: 100%;
-  background: rgba(255, 176, 176, 0.856);
+  background: rgba(203, 229, 231, 0.856);
   transform: translateX(-50%);
   border-radius: 4px;
   transition: 0.5s ease;
@@ -23,11 +23,11 @@
 .single__member-social a i {
   width: 28px;
   height: 28px;
-  color: #000d6b;
+  color: #54a4bf;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #fff;
+  background: #ddf1f4;
   border-radius: 50%;
   font-size: 0.9rem;
   font-weight: 600;
@@ -45,9 +45,10 @@
 
 .single__member-img img {
   border-radius: 4px;
+  width: 100px;
 }
 
 .single__member-img:hover .single__member-social {
   top: 0;
-  opacity: 1;
+  opacity: 9;
 }
