--- a/src/styles/our-member.css
+++ b/src/styles/our-member.css
@@ -38,10 +38,10 @@
   cursor: pointer;
 }
 
-.single__member-img {
+/* .single__member-img {
   position: relative;
   cursor: pointer;
-}
+} */
 
 .single__member-img img {
   border-radius: 4px;
@@ -50,5 +50,5 @@
 
 .single__member-img:hover .single__member-social {
   top: 0;
-  opacity: 9;
+  opacity: 1;
 }
