--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,111 @@
-body {
+/* ======== google fonts ======== */
+
+/* ======= base style ====== */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* ========= pre-define css ========= */
+h1,
+h2,
+h3,
+h5 {
+  color: #1e1f26;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+h3,
+h4 {
+  font-size: 1.8rem;
+}
+
+h5,
+h6 {
+  font-size: 1.2rem;
+}
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+a:hover {
+  color: unset;
+}
+
+ul {
+  margin: 3px;
+  list-style: none;
+}
+
+.section__title {
+  color: #1e1f26;
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+.section__subtitle {
+  color: #283655;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.section__description {
+  color: #283655;
+  font-size: 0.9rem;
+  line-height: 30px;
+}
+
+section {
+  padding: 50px 0px;
+}
+
+.btn {
+  padding: 7px 15px;
+  background: #1e1f26;
+  color: #1e1f26;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.btn:hover {
+  color: palevioletred !important;
+  background: #000c6bd0;
+}
+
+/* NEW CODE */
+
+.ri-phone-line {
+  color: #1e1f26;
+}
+
+.find__btn {
+  background: #1e1f26 !important;
+  color: #d0e1f9 !important;
+  border: none;
+  outline: none;
+  position: absolute;
+  bottom: 85px;
+  right: 850px;
+    right: 350px;
+}
+
+@media only screen and (max-width: 768px) {
+  section {
+    padding: 30px 0px;
+  }
+
+  .section__title {
+    font-size: 1.6rem;
+  }
+
+  .section__subtitle {
+    font-size: 1.1rem;
+  }
 }
