--- a/src/styles/become-driver.css
+++ b/src/styles/become-driver.css
@@ -8,14 +8,14 @@
 }
 
 .become__driver button {
-  background: #e6f4f7;
-  color: black;
+  background: #1E1F26;
+  color: #D0E1F9;
   font-weight: 600;
 }
 
 .become__driver-title {
   font-size: 2.8rem;
-  color: black;
+  color: #1E1F26;
   line-height: 65px;
 }
 
