--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,14 +1,14 @@
 .social__link-icon {
   text-decoration: none;
 
-  color: #000d6b;
+  color: rgb(14, 11, 11);
   font-weight: 500;
   font-size: 1.2rem;
 }
 
 .contact__btn {
   padding: 7px 15px;
-  background: #000d6b;
+  background:  rgb(241, 142, 142);
   color: #fff;
   border: none;
   outline: none;
