--- a/src/styles/hero-slider.css
+++ b/src/styles/hero-slider.css
@@ -4,24 +4,27 @@
 }
 
 .slider__item-01 {
-  background: linear-gradient(rgb(0, 13, 107, 0.5), rgb(0, 13, 107, 0.5)),
+  background: linear-gradient(rgba(80, 82, 83, 0.5), rgba(80, 82, 83, 0.5)),
     url("../assets/all-images/slider-img/slider-1.jpg");
+  filter: grayscale(65%);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .slider__item-02 {
-  background: linear-gradient(rgb(0, 13, 107, 0.5), rgb(0, 13, 107, 0.5)),
+  background: linear-gradient(rgba(80, 82, 83, 0.5), rgba(80, 82, 83, 0.5)),
     url("../assets/all-images/slider-img/slider-2.jpg");
+  filter: grayscale(65%);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .slider__item-03 {
-  background: linear-gradient(rgb(0, 13, 107, 0.5), rgb(0, 13, 107, 0.5)),
+  background: linear-gradient(rgba(80, 82, 83, 0.5), rgba(80, 82, 83, 0.5)),
     url("../assets/all-images/slider-img/slider-3.jpg");
+  filter: grayscale(65%);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -45,6 +48,8 @@
   color: #000d6b !important;
   border: none;
   outline: none;
+   position: absolute;
+    bottom: 85px; 
 }
 
 .reserve__btn a {
