--- a/src/styles/our-member.css
+++ b/src/styles/our-member.css
@@ -1,6 +1,8 @@
 .single__member {
   border: 1px solid #7c8a972d;
   border-radius: 4px;
+object-fit: cover;
+
 }
 
 .single__member-social {
@@ -38,10 +40,11 @@
   cursor: pointer;
 }
 
-/* .single__member-img {
+.single__member-img {
   position: relative;
   cursor: pointer;
-} */
+  object-fit: fill;
+}
 
 .single__member-img img {
   border-radius: 4px;
@@ -51,4 +54,9 @@
 .single__member-img:hover .single__member-social {
   top: 0;
   opacity: 1;
+}
+
+
+.mb-4{
+  margin-left: 69px;
 }
