--- a/src/styles/common-section.css
+++ b/src/styles/common-section.css
@@ -1,5 +1,5 @@
 .common__section {
-  background: linear-gradient(rgb(0, 13, 107, 0.6), rgb(0, 13, 107, 0.6)),
+  background: linear-gradient(rgba(80, 82, 83, 0.5), rgba(80, 82, 83, 0.5)),
     url("../assets/all-images/drive.jpg");
   background-position: center;
   background-size: cover;
