--- a/src/styles/become-driver.css
+++ b/src/styles/become-driver.css
@@ -1,6 +1,4 @@
 .become__driver {
-  background: linear-gradient(rgb(0, 13, 107, 0.9), rgb(0, 13, 107, 0.9)),
- ;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -8,14 +6,14 @@
 }
 
 .become__driver button {
-  background: #1E1F26;
-  color: #D0E1F9;
+  background: #1e1f26;
+  color: #d0e1f9;
   font-weight: 600;
 }
 
 .become__driver-title {
   font-size: 2.8rem;
-  color: #1E1F26;
+  color: #1e1f26;
   line-height: 65px;
 }
 
