--- a/src/styles/our-member.css
+++ b/src/styles/our-member.css
@@ -1,8 +1,7 @@
 .single__member {
   border: 1px solid #7c8a972d;
   border-radius: 4px;
-object-fit: cover;
-
+  object-fit: cover;
 }
 
 .single__member-social {
@@ -11,11 +10,12 @@ object-fit: cover;
   justify-content: center;
   column-gap: 0.5rem;
   position: absolute;
-  top: -100%;
+  top: -35%;
   left: 50%;
   width: 100%;
   height: 100%;
-  background: rgba(203, 229, 231, 0.856);
+  background: rgba(56, 57, 58, 0.5);
+  filter: grayscale(65%);
   transform: translateX(-50%);
   border-radius: 4px;
   transition: 0.5s ease;
@@ -25,11 +25,11 @@ object-fit: cover;
 .single__member-social a i {
   width: 28px;
   height: 28px;
-  color: #54a4bf;
+  color: #1e1f26;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #ddf1f4;
+  background: #d0e1f9;
   border-radius: 50%;
   font-size: 0.9rem;
   font-weight: 600;
@@ -56,7 +56,6 @@ object-fit: cover;
   opacity: 1;
 }
 
-
-.mb-4{
+.mb-4 {
   margin-left: 69px;
 }
