--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -14,6 +14,10 @@
   border-radius: 5px;
 }
 
+.contact__btn:hover{
+  color: palevioletred;
+}
+
 @media only screen and (max-width: 768px) {
   .contact__btn {
     margin-bottom: 40px;
